--- a/team.html
+++ b/team.html
@@ -336,7 +336,7 @@
                                         </div>
                                     </figure>
                                     <div class="lower-content">
-                                        <h4><a href="index.html">Claire Corporate</a></h4>
+                                        <h4><a href="index.html">Claire Wagako</a></h4>
                                         <span class="designation">student USIU</span>
                                     </div>
                                 </div>
